Dockefile changes